--- a/admin.html
+++ b/admin.html
@@ -955,7 +955,7 @@
                     const nombre = product.Nombre || product.nombre || 'Sin nombre';
                     const descripcion = product.Descripción || product.descripcion || 'Sin descripción';
                     const precio = product.Precio || product.precio || '0';
-                    const cantidad = product.Cantidad || product.cantidad || '0';
+                    const cantidad = product.Cantidad || product.cantidad || 0;
                     
                     // Manejar múltiples imágenes
                     let imagen = '';
