--- a/catalogo.html
+++ b/catalogo.html
@@ -1037,7 +1037,7 @@
                     <li><a href="sobre-nosotros.html" class="hover:text-pink-200 transition py-2 relative">Nuestra
                             Historia</a>
                     </li>
-                    <li><a href="contacto.html" class="hover:text-pink-200 transition py-2 relative">Contactanos</a>
+                    <li><a href="contacto.html" class="hover:text-pink-200 transition py-2 relative">Contáctanos</a>
                     </li>
                 </ul>
             </nav>
@@ -1061,7 +1061,7 @@
                         class="block py-3 hover:bg-pink-400 transition font-bold bg-pink-400">Comprar</a></li>
                 <li><a href="sobre-nosotros.html" class="block py-3 hover:bg-pink-400 transition">Nuestra Historia</a>
                 </li>
-                <li><a href="contacto.html" class="block py-3 hover:bg-pink-400 transition">Contactanos</a></li>
+                <li><a href="contacto.html" class="block py-3 hover:bg-pink-400 transition">Contáctanos</a></li>
             </ul>
         </div>
     </header>
@@ -1314,7 +1314,7 @@
                                 class="text-gray-300 hover:text-white transition focus:outline-none focus:text-white">Nuestra
                                 Historia</a></li>
                         <li><a href="contacto.html"
-                                class="text-gray-300 hover:text-white transition focus:outline-none focus:text-white">Contactanos</a>
+                                class="text-gray-300 hover:text-white transition focus:outline-none focus:text-white">Contáctanos</a>
                         </li>
                     </ul>
                 </div>
