--- a/Inicio.html
+++ b/Inicio.html
@@ -758,7 +758,7 @@
                                 class="text-gray-300 hover:text-white transition focus:outline-none focus:text-white">Nuestra
                                 Historia</a></li>
                         <li><a href="contacto.html"
-                                class="text-gray-300 hover:text-white transition focus:outline-none focus:text-white">Contactanos</a>
+                                class="text-gray-300 hover:text-white transition focus:outline-none focus:text-white">Contáctanos</a>
                         </li>
                     </ul>
                 </div>
